v3.10.10 (XXXX-XX-XX)
---------------------

* Updated ArangoDB Starter to 0.16.0.

* Avoid recursive lock during agency startup.

* FE-20: fix UI placeholder format for locale when creating analyzers.

* FE-304, FE-305: use navigator.onLine for checking internet connection, correct
  path for running/slow queries.

* FE-303: fix geo map doesn't show up in query UI.

* Use libunwind in jemalloc profiling to make it available with libmusl
  and static binaries.

* FE-287: fix number validation for replicationFactor and writeConcern.

* FE-162: Fix display of geodesic lines.

* Upgraded OpenSSL to 3.0.9.

* Enforce that server always returns an empty body if the return code is 204.

* Arangodump retries dump requests in more cases: read, write and connection
  errors.

* When trying to read multiple documents, the coordinator will now handle empty
  lists gracefully and return an empty result set instead of an error.


v3.10.9 (2023-06-30)
--------------------

* Added startup option `--replication.active-failover-leader-grace-period`.
  This startup option can be used to set the amount of time (in seconds) for
  which the current leader in an active failover setup will continue to assume
  its leadership even if it lost connection to the agency.

  In case the leader cannot contact the agency anymore, the agency will elect a
  new leader after the supervision grace period has elapsed.
  In order to avoid a split-brain situation with multiple servers assuming
  leadership, this option can be used to make a disconnected leader refuse any
  incoming write operations after the grace period controled by this option has
  elapsed.
  Ideally the startup option should be given a value greater than the value of
  the supervision grace period, in order to avoid a temporarily disconnected
  leader giving up leadership too early and unnecessarily.

  The default value is 120 seconds. Setting the option to a value of 0 will keep